--- a/figures.ipynb
+++ b/figures.ipynb
@@ -599,7 +599,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gammares = pd.read_csv(\"result_files/disproportionality_est.csv\",sep=\"\\t\",header=0,index_col=[0,1])\n"
+    "### you must run the above code to generate this file\n",
+    "gammares = pd.read_csv(\"result_files/disproportionality_est.csv.gz\",sep=\"\\t\",header=0,index_col=[0,1])\n"
    ]
   },
   {
@@ -1211,7 +1212,7 @@
     }
    ],
    "source": [
-    "choi = pd.read_table(\"embeddings/claims_codes_hs_300.txt.gz\",sep=\" \",index_col =0, skiprows=1,header=None)\n",
+    "choi = pd.read_table(\"embeddings/claims_codes_hs_300.txt\",sep=\" \",index_col =0, skiprows=1,header=None)\n",
     "choi = choi.iloc[:,:300]\n",
     "choi = choi.loc[choi.index.str.startswith(\"IDX\"),:] ## get ICD codes\n",
     "choi.index = choi.index.str.replace(\"IDX_\",\"\") ## rename to ICD codes...\n",
